# jira-mcp

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
