[project]
name = "jira-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
test = [
    "aioresponses>=0.7",
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
