[project]
name = "jira-mcp"
version = "0.1.0"
description = "A local MCP server wrapping the Jira REST API v3 for openmrs.atlassian.net"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "aioresponses>=0.7",
    "pre-commit>=4",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[project.scripts]
jira-mcp = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
